--- a/po/fa.po
+++ b/po/fa.po
@@ -3,14 +3,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2011-08-11 13:55+0200\n"
+"POT-Creation-Date: 2011-08-11 09:06-0400\n"
 "PO-Revision-Date: 2010-05-19 03:54+0200\n"
 "Last-Translator: <ahmad_usa2007@yahoo.com>\n"
 "Language-Team: persian <fa@li.org>\n"
-"Language: fa\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: fa\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Generator: Pootle 2.0.1\n"
 
@@ -209,7 +209,7 @@ msgstr "توضيحات"
 #: server_privileges.php:1468 server_privileges.php:1479
 #: server_privileges.php:1725 server_privileges.php:1736
 #: server_privileges.php:2056 server_privileges.php:2061
-#: server_privileges.php:2355 sql.php:267 sql.php:328 tbl_printview.php:194
+#: server_privileges.php:2355 sql.php:272 sql.php:333 tbl_printview.php:194
 #: tbl_structure.php:347 tbl_tracking.php:321 tbl_tracking.php:326
 msgid "No"
 msgstr "خير"
@@ -230,7 +230,7 @@ msgstr "خير"
 #: server_databases.php:76 server_privileges.php:1465
 #: server_privileges.php:1476 server_privileges.php:1722
 #: server_privileges.php:1736 server_privileges.php:2056
-#: server_privileges.php:2059 server_privileges.php:2355 sql.php:327
+#: server_privileges.php:2059 server_privileges.php:2355 sql.php:332
 #: tbl_printview.php:194 tbl_structure.php:41 tbl_structure.php:347
 #: tbl_tracking.php:319 tbl_tracking.php:324
 msgid "Yes"
@@ -616,8 +616,8 @@ msgstr "پیگردی فعال نمی باشد."
 #: db_structure.php:373 libraries/display_tbl.lib.php:2226
 #, php-format
 msgid ""
-"This view has at least this number of rows. Please refer to %sdocumentation"
-"%s."
+"This view has at least this number of rows. Please refer to %sdocumentation%"
+"s."
 msgstr ""
 "در این نما حداقل این تعداد از سطرها موجود می باشد. لطفاً به %sنوشتار%s مراجعه "
 "نمایید."
@@ -760,7 +760,7 @@ msgstr "به روز شده"
 
 #: db_tracking.php:89 libraries/rte/rte_events.lib.php:380
 #: libraries/rte/rte_list.lib.php:67 libraries/server_links.inc.php:51
-#: server_status.php:1068 sql.php:945 tbl_tracking.php:638
+#: server_status.php:1068 sql.php:837 tbl_tracking.php:638
 msgid "Status"
 msgstr ""
 
@@ -861,8 +861,8 @@ msgstr ""
 #: import.php:57
 #, php-format
 msgid ""
-"You probably tried to upload too large file. Please refer to %sdocumentation"
-"%s for ways to workaround this limit."
+"You probably tried to upload too large file. Please refer to %sdocumentation%"
+"s for ways to workaround this limit."
 msgstr ""
 
 #: import.php:277 import.php:330 libraries/File.class.php:456
@@ -899,7 +899,7 @@ msgstr "سطر حذف گرديد ."
 msgid "Showing bookmark"
 msgstr ""
 
-#: import.php:401 sql.php:980
+#: import.php:401 sql.php:872
 #, php-format
 msgid "Bookmark %s created"
 msgstr ""
@@ -946,15 +946,15 @@ msgstr "برای انتخاب کلیک کنبد"
 msgid "Click to unselect"
 msgstr ""
 
-#: js/messages.php:29 libraries/import.lib.php:102 sql.php:224
+#: js/messages.php:29 libraries/import.lib.php:102 sql.php:229
 msgid "\"DROP DATABASE\" statements are disabled."
 msgstr "دستور \"DROP DATABASE\" غيرفعال مي‌باشد."
 
-#: js/messages.php:32 libraries/mult_submits.inc.php:282 sql.php:322
+#: js/messages.php:32 libraries/mult_submits.inc.php:282 sql.php:327
 msgid "Do you really want to "
 msgstr "آيا مطمئن هستيد "
 
-#: js/messages.php:33 libraries/mult_submits.inc.php:282 sql.php:307
+#: js/messages.php:33 libraries/mult_submits.inc.php:282 sql.php:312
 msgid "You are about to DESTROY a complete database!"
 msgstr ""
 
@@ -2328,8 +2328,8 @@ msgstr "به %s خوش‌آمديد"
 #: libraries/auth/config.auth.lib.php:100
 #, php-format
 msgid ""
-"You probably did not create a configuration file. You might want to use the "
-"%1$ssetup script%2$s to create one."
+"You probably did not create a configuration file. You might want to use the %"
+"1$ssetup script%2$s to create one."
 msgstr ""
 
 #: libraries/auth/config.auth.lib.php:109
@@ -2653,7 +2653,7 @@ msgctxt "Inline edit query"
 msgid "Inline"
 msgstr "موتور"
 
-#: libraries/common.lib.php:1278 sql.php:941
+#: libraries/common.lib.php:1278 sql.php:833
 msgid "Profiling"
 msgstr ""
 
@@ -5303,8 +5303,8 @@ msgstr ""
 #, php-format
 msgid ""
 "This value is interpreted using %1$sstrftime%2$s, so you can use time "
-"formatting strings. Additionally the following transformations will happen: "
-"%3$s. Other text will be kept as is. See the %4$sFAQ%5$s for details."
+"formatting strings. Additionally the following transformations will happen: %"
+"3$s. Other text will be kept as is. See the %4$sFAQ%5$s for details."
 msgstr ""
 
 #: libraries/display_export.lib.php:270
@@ -5593,7 +5593,7 @@ msgstr "Showing rows"
 msgid "total"
 msgstr "جمع كل"
 
-#: libraries/display_tbl.lib.php:2252 sql.php:692
+#: libraries/display_tbl.lib.php:2252 sql.php:697
 #, php-format
 msgid "Query took %01.4f sec"
 msgstr ""
@@ -6010,8 +6010,8 @@ msgstr ""
 #: libraries/engines/pbxt.lib.php:125
 #, php-format
 msgid ""
-"Documentation and further information about PBXT can be found on the "
-"%sPrimeBase XT Home Page%s."
+"Documentation and further information about PBXT can be found on the %"
+"sPrimeBase XT Home Page%s."
 msgstr ""
 
 #: libraries/engines/pbxt.lib.php:129
@@ -6338,7 +6338,7 @@ msgid "Generated by"
 msgstr "توليد‌شده توسط"
 
 #: libraries/import.lib.php:152 libraries/rte/rte_routines.lib.php:1237
-#: sql.php:688 tbl_change.php:183 tbl_get_field.php:34
+#: sql.php:693 tbl_change.php:183 tbl_get_field.php:34
 msgid "MySQL returned an empty result set (i.e. zero rows)."
 msgstr "MySQL يك نتيجه خالي داد. (مثلا 0 سطر)."
 
@@ -7049,7 +7049,7 @@ msgid "Returns"
 msgstr "آمار پايگاههاي داده"
 
 #: libraries/rte/rte_list.lib.php:62 libraries/rte/rte_triggers.lib.php:326
-#: server_status.php:1067 sql.php:946
+#: server_status.php:1067 sql.php:838
 msgid "Time"
 msgstr ""
 
@@ -7572,11 +7572,11 @@ msgstr "تقویم"
 msgid "Columns"
 msgstr "نام ستونها"
 
-#: libraries/sql_query_form.lib.php:302 sql.php:1019 sql.php:1036
+#: libraries/sql_query_form.lib.php:302 sql.php:911 sql.php:928
 msgid "Bookmark this SQL query"
 msgstr ""
 
-#: libraries/sql_query_form.lib.php:309 sql.php:1030
+#: libraries/sql_query_form.lib.php:309 sql.php:922
 msgid "Let every user access this bookmark"
 msgstr ""
 
@@ -7690,9 +7690,9 @@ msgid ""
 msgstr ""
 "اگر نوع ستون \"enum\" يا \"set\" مي‌باشد ، لطفا براي ورود مقادير از اين قالب "
 "استفاده نماييد : 'a','b','c'...<br /> اگر احتياج داشتيد كه از علامت مميز "
-"برعكس(بك‌اسلش) (\" \\ \") يا نقل‌قول تكي (\" ' \") در آن مقادير استفاده "
-"نماييد ، قبل از آنها علامت (\" \\ \") را بگذاريد<br /> (براي مثال'\\\\xyz' "
-"يا 'a\\'b')"
+"برعكس(بك‌اسلش) (\" \\ \") يا نقل‌قول تكي (\" ' \") در آن مقادير استفاده نماييد "
+"، قبل از آنها علامت (\" \\ \") را بگذاريد<br /> (براي مثال'\\\\xyz' يا 'a"
+"\\'b')"
 
 #: libraries/tbl_properties.inc.php:109
 msgid ""
@@ -7727,9 +7727,9 @@ msgid ""
 msgstr ""
 "اگر نوع ستون \"enum\" يا \"set\" مي‌باشد ، لطفا براي ورود مقادير از اين قالب "
 "استفاده نماييد : 'a','b','c'...<br /> اگر احتياج داشتيد كه از علامت مميز "
-"برعكس(بك‌اسلش) (\" \\ \") يا نقل‌قول تكي (\" ' \") در آن مقادير استفاده "
-"نماييد ، قبل از آنها علامت (\" \\ \") را بگذاريد<br /> (براي مثال'\\\\xyz' "
-"يا 'a\\'b')"
+"برعكس(بك‌اسلش) (\" \\ \") يا نقل‌قول تكي (\" ' \") در آن مقادير استفاده نماييد "
+"، قبل از آنها علامت (\" \\ \") را بگذاريد<br /> (براي مثال'\\\\xyz' يا 'a"
+"\\'b')"
 
 #: libraries/tbl_properties.inc.php:342
 msgid "ENUM or SET data too long?"
@@ -7995,8 +7995,8 @@ msgid ""
 "this security hole by setting a password for user 'root'."
 msgstr ""
 "پرونده پيكربندي شما حاوي تنظيماتي است (كاربر root بدون اسم رمز) كه مرتبط با "
-"حساب پيش‌فرض MySQL مي‌باشد. اجراي MySQL با اين پيش‌فرض باعث ورود غيرمجاز "
-"مي‌شود ، و شما بايد اين حفره امنيتي را ذرست كنيد."
+"حساب پيش‌فرض MySQL مي‌باشد. اجراي MySQL با اين پيش‌فرض باعث ورود غيرمجاز مي‌شود "
+"، و شما بايد اين حفره امنيتي را ذرست كنيد."
 
 #: main.php:251
 msgid ""
@@ -8783,8 +8783,8 @@ msgstr ""
 msgid ""
 "Note: phpMyAdmin gets the users' privileges directly from MySQL's privilege "
 "tables. The content of these tables may differ from the privileges the "
-"server uses, if they have been changed manually. In this case, you should "
-"%sreload the privileges%s before you continue."
+"server uses, if they have been changed manually. In this case, you should %"
+"sreload the privileges%s before you continue."
 msgstr ""
 
 #: server_privileges.php:1851
@@ -10434,36 +10434,36 @@ msgstr ""
 msgid "Browse foreign values"
 msgstr ""
 
-#: sql.php:192
+#: sql.php:197
 #, php-format
 msgid "Using bookmark \"%s\" as default browse query."
 msgstr ""
 
-#: sql.php:664 tbl_replace.php:369
+#: sql.php:669 tbl_replace.php:369
 #, php-format
 msgid "Inserted row id: %1$d"
 msgstr ""
 
-#: sql.php:681
+#: sql.php:686
 msgid "Showing as PHP code"
 msgstr ""
 
-#: sql.php:684 tbl_replace.php:343
+#: sql.php:689 tbl_replace.php:343
 msgid "Showing SQL query"
 msgstr ""
 
-#: sql.php:686
+#: sql.php:691
 #, fuzzy
 #| msgid "Validate SQL"
 msgid "Validated SQL"
 msgstr "معتبرسازي SQL"
 
-#: sql.php:993
+#: sql.php:885
 #, php-format
 msgid "Problems with indexes of table `%s`"
 msgstr ""
 
-#: sql.php:1024
+#: sql.php:916
 msgid "Label"
 msgstr ""
 
@@ -11295,7 +11295,7 @@ msgstr ""
 #: po/advisory_rules.php:27
 msgid ""
 "It is suggested to set {long_query_time} to a lower value, depending on your "
-"enviroment. Usually a value of 1-5 seconds is suggested."
+"environment. Usually a value of 1-5 seconds is suggested."
 msgstr ""
 
 #: po/advisory_rules.php:28
@@ -11503,8 +11503,8 @@ msgstr ""
 #: po/advisory_rules.php:83
 #, php-format
 msgid ""
-"The current ratio of free query cache memory to total query cache size is %s"
-"%%. It should be above 80%%"
+"The current ratio of free query cache memory to total query cache size is %s%"
+"%. It should be above 80%%"
 msgstr ""
 
 #: po/advisory_rules.php:85
@@ -11570,7 +11570,7 @@ msgstr ""
 
 #: po/advisory_rules.php:97
 msgid ""
-"Depending on your enviroment, it might be performance increasing to reduce "
+"Depending on your environment, it might be performance increasing to reduce "
 "this value."
 msgstr ""
 
@@ -11624,8 +11624,8 @@ msgstr ""
 #: po/advisory_rules.php:108
 #, php-format
 msgid ""
-"%s%% of all sorts cause temporary tables, this value should be lower than "
-"10%%."
+"%s%% of all sorts cause temporary tables, this value should be lower than 10%"
+"%."
 msgstr ""
 
 #: po/advisory_rules.php:110
@@ -12219,7 +12219,7 @@ msgstr ""
 #: po/advisory_rules.php:262
 #, php-format
 msgid ""
-"The InnoDB buffer pool has a profound impact on perfomance for InnoDB "
+"The InnoDB buffer pool has a profound impact on performance for InnoDB "
 "tables. Assign all your remaining memory to this buffer. For database "
 "servers that use solely InnoDB as storage engine and have no other services "
 "(e.g. a web server) running, you may set this as high as 80% of your "
