--- a/po/nb.po
+++ b/po/nb.po
@@ -3,14 +3,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2011-08-11 13:55+0200\n"
+"POT-Creation-Date: 2011-08-11 09:06-0400\n"
 "PO-Revision-Date: 2011-03-07 11:21+0200\n"
 "Last-Translator: Michal Čihař <michal@cihar.com>\n"
 "Language-Team: norwegian <no@li.org>\n"
-"Language: nb\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: nb\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.0.5\n"
 
@@ -211,7 +211,7 @@ msgstr "Kommentarer"
 #: server_privileges.php:1468 server_privileges.php:1479
 #: server_privileges.php:1725 server_privileges.php:1736
 #: server_privileges.php:2056 server_privileges.php:2061
-#: server_privileges.php:2355 sql.php:267 sql.php:328 tbl_printview.php:194
+#: server_privileges.php:2355 sql.php:272 sql.php:333 tbl_printview.php:194
 #: tbl_structure.php:347 tbl_tracking.php:321 tbl_tracking.php:326
 msgid "No"
 msgstr "Nei"
@@ -232,7 +232,7 @@ msgstr "Nei"
 #: server_databases.php:76 server_privileges.php:1465
 #: server_privileges.php:1476 server_privileges.php:1722
 #: server_privileges.php:1736 server_privileges.php:2056
-#: server_privileges.php:2059 server_privileges.php:2355 sql.php:327
+#: server_privileges.php:2059 server_privileges.php:2355 sql.php:332
 #: tbl_printview.php:194 tbl_structure.php:41 tbl_structure.php:347
 #: tbl_tracking.php:319 tbl_tracking.php:324
 msgid "Yes"
@@ -615,8 +615,8 @@ msgstr "Overvåkning er ikke aktiv."
 #: db_structure.php:373 libraries/display_tbl.lib.php:2226
 #, php-format
 msgid ""
-"This view has at least this number of rows. Please refer to %sdocumentation"
-"%s."
+"This view has at least this number of rows. Please refer to %sdocumentation%"
+"s."
 msgstr "Denne visningen har minst dette antall rader. Sjekk %sdocumentation%s."
 
 #: db_structure.php:387 db_structure.php:401 libraries/header.inc.php:158
@@ -759,7 +759,7 @@ msgstr "Oppdatert"
 
 #: db_tracking.php:89 libraries/rte/rte_events.lib.php:380
 #: libraries/rte/rte_list.lib.php:67 libraries/server_links.inc.php:51
-#: server_status.php:1068 sql.php:945 tbl_tracking.php:638
+#: server_status.php:1068 sql.php:837 tbl_tracking.php:638
 msgid "Status"
 msgstr "Status"
 
@@ -859,8 +859,8 @@ msgstr "Dump har blitt lagret til fila %s."
 #: import.php:57
 #, php-format
 msgid ""
-"You probably tried to upload too large file. Please refer to %sdocumentation"
-"%s for ways to workaround this limit."
+"You probably tried to upload too large file. Please refer to %sdocumentation%"
+"s for ways to workaround this limit."
 msgstr ""
 "Du forsøkte sansynligvis å laste opp en for stor fil. Sjekk %sdokumentasjonen"
 "%s for måter å omgå denne begrensningen."
@@ -904,7 +904,7 @@ msgstr "Bokmerket har blitt slettet."
 msgid "Showing bookmark"
 msgstr "Vis bokmerke"
 
-#: import.php:401 sql.php:980
+#: import.php:401 sql.php:872
 #, php-format
 msgid "Bookmark %s created"
 msgstr "Bokmerke %s opprettet"
@@ -956,15 +956,15 @@ msgstr "Klikk for å velge"
 msgid "Click to unselect"
 msgstr "Klikk for å fjerne valg"
 
-#: js/messages.php:29 libraries/import.lib.php:102 sql.php:224
+#: js/messages.php:29 libraries/import.lib.php:102 sql.php:229
 msgid "\"DROP DATABASE\" statements are disabled."
 msgstr "\"DROP DATABASE\"-uttrykk er avslått."
 
-#: js/messages.php:32 libraries/mult_submits.inc.php:282 sql.php:322
+#: js/messages.php:32 libraries/mult_submits.inc.php:282 sql.php:327
 msgid "Do you really want to "
 msgstr "Vil du virkelig "
 
-#: js/messages.php:33 libraries/mult_submits.inc.php:282 sql.php:307
+#: js/messages.php:33 libraries/mult_submits.inc.php:282 sql.php:312
 msgid "You are about to DESTROY a complete database!"
 msgstr "Du er i ferd med å SLETTE en komplett database!"
 
@@ -2320,8 +2320,8 @@ msgstr "Velkommen til %s"
 #: libraries/auth/config.auth.lib.php:100
 #, php-format
 msgid ""
-"You probably did not create a configuration file. You might want to use the "
-"%1$ssetup script%2$s to create one."
+"You probably did not create a configuration file. You might want to use the %"
+"1$ssetup script%2$s to create one."
 msgstr ""
 "En mulig årsak for dette er at du ikke opprettet konfigurasjonsfila. Du bør "
 "kanskje bruke %1$ssetup script%2$s for å opprette en."
@@ -2653,7 +2653,7 @@ msgctxt "Inline edit query"
 msgid "Inline"
 msgstr "Inline"
 
-#: libraries/common.lib.php:1278 sql.php:941
+#: libraries/common.lib.php:1278 sql.php:833
 msgid "Profiling"
 msgstr "Profilering"
 
@@ -5406,8 +5406,8 @@ msgstr ", @TABLE@ vil bli tabellnavnet"
 #| "happen: %3$s. Other text will be kept as is."
 msgid ""
 "This value is interpreted using %1$sstrftime%2$s, so you can use time "
-"formatting strings. Additionally the following transformations will happen: "
-"%3$s. Other text will be kept as is. See the %4$sFAQ%5$s for details."
+"formatting strings. Additionally the following transformations will happen: %"
+"3$s. Other text will be kept as is. See the %4$sFAQ%5$s for details."
 msgstr ""
 "Denne verdien blir tolket slik som %1$sstrftime%2$s, så du kan bruke "
 "tidformateringsstrenger. I tillegg vil følgende transformasjoner skje: %3$s. "
@@ -5715,7 +5715,7 @@ msgstr "Viser rader "
 msgid "total"
 msgstr "totalt"
 
-#: libraries/display_tbl.lib.php:2252 sql.php:692
+#: libraries/display_tbl.lib.php:2252 sql.php:697
 #, php-format
 msgid "Query took %01.4f sec"
 msgstr "Spørring tok %01.4f sek"
@@ -6185,8 +6185,8 @@ msgstr ""
 #: libraries/engines/pbxt.lib.php:125
 #, php-format
 msgid ""
-"Documentation and further information about PBXT can be found on the "
-"%sPrimeBase XT Home Page%s."
+"Documentation and further information about PBXT can be found on the %"
+"sPrimeBase XT Home Page%s."
 msgstr ""
 
 #: libraries/engines/pbxt.lib.php:129
@@ -6516,7 +6516,7 @@ msgid "Generated by"
 msgstr "Generert av"
 
 #: libraries/import.lib.php:152 libraries/rte/rte_routines.lib.php:1237
-#: sql.php:688 tbl_change.php:183 tbl_get_field.php:34
+#: sql.php:693 tbl_change.php:183 tbl_get_field.php:34
 msgid "MySQL returned an empty result set (i.e. zero rows)."
 msgstr "MySQL returnerte ett tomt resultat (m.a.o. ingen rader)."
 
@@ -7259,7 +7259,7 @@ msgid "Returns"
 msgstr "Returtype"
 
 #: libraries/rte/rte_list.lib.php:62 libraries/rte/rte_triggers.lib.php:326
-#: server_status.php:1067 sql.php:946
+#: server_status.php:1067 sql.php:838
 msgid "Time"
 msgstr "Tid"
 
@@ -7810,11 +7810,11 @@ msgstr "Fjern"
 msgid "Columns"
 msgstr "Kolonner"
 
-#: libraries/sql_query_form.lib.php:302 sql.php:1019 sql.php:1036
+#: libraries/sql_query_form.lib.php:302 sql.php:911 sql.php:928
 msgid "Bookmark this SQL query"
 msgstr "Lagre denne SQL-spørringen"
 
-#: libraries/sql_query_form.lib.php:309 sql.php:1030
+#: libraries/sql_query_form.lib.php:309 sql.php:922
 msgid "Let every user access this bookmark"
 msgstr "La alle brukere ha adgang til dette bokmerket"
 
@@ -7960,8 +7960,8 @@ msgid ""
 "For a list of available transformation options and their MIME type "
 "transformations, click on %stransformation descriptions%s"
 msgstr ""
-"For en liste over tilgjengelige transformasjonsvalg, klikk på "
-"%stransformasjonsbeskrivelser%s"
+"For en liste over tilgjengelige transformasjonsvalg, klikk på %"
+"stransformasjonsbeskrivelser%s"
 
 #: libraries/tbl_properties.inc.php:147
 msgid "Transformation options"
@@ -9124,8 +9124,8 @@ msgstr "Slett databasene som har det samme navnet som brukerne."
 msgid ""
 "Note: phpMyAdmin gets the users' privileges directly from MySQL's privilege "
 "tables. The content of these tables may differ from the privileges the "
-"server uses, if they have been changed manually. In this case, you should "
-"%sreload the privileges%s before you continue."
+"server uses, if they have been changed manually. In this case, you should %"
+"sreload the privileges%s before you continue."
 msgstr ""
 "Merk: phpMyAdmin får brukerprivilegiene direkte fra MySQL "
 "privilegietabeller. Innholdet i disse tabellene kan være forskjellig fra de "
@@ -10960,8 +10960,8 @@ msgid ""
 "of users, including you, are connected to."
 msgstr ""
 "Hvis du føler at dette er nødvending, så bruk ekstra "
-"beskyttelsesinnstillinger - [a@?page=servers&amp;mode=edit&amp;id="
-"%1$d#tab_Server_config]vertsautentisering[/a] innstillinger og [a@?"
+"beskyttelsesinnstillinger - [a@?page=servers&amp;mode=edit&amp;id=%1"
+"$d#tab_Server_config]vertsautentisering[/a] innstillinger og [a@?"
 "page=form&amp;formset=features#tab_Security]godkjente mellomlagerliste[/a]. "
 "Merk at IP-basert beskyttelse ikke er så god hvis din IP tilhører en "
 "Internettilbyder som har tusenvis av brukere, inkludert deg, tilknyttet."
@@ -10972,9 +10972,9 @@ msgstr ""
 #| "You set the [kbd]config[/kbd] authentication type and included username "
 #| "and password for auto-login, which is not a desirable option for live "
 #| "hosts. Anyone who knows or guesses your phpMyAdmin URL can directly "
-#| "access your phpMyAdmin panel. Set [a@?page=servers&amp;mode=edit&amp;id="
-#| "%1$d#tab_Server]authentication type[/a] to [kbd]cookie[/kbd] or [kbd]http"
-#| "[/kbd]."
+#| "access your phpMyAdmin panel. Set [a@?page=servers&amp;mode=edit&amp;id=%1"
+#| "$d#tab_Server]authentication type[/a] to [kbd]cookie[/kbd] or [kbd]http[/"
+#| "kbd]."
 msgid ""
 "You set the [kbd]config[/kbd] authentication type and included username and "
 "password for auto-login, which is not a desirable option for live hosts. "
@@ -11045,34 +11045,34 @@ msgstr "Nøkkelen bør inneholde tall, bokstaver [em]og[/em] spesielle tegn"
 msgid "Browse foreign values"
 msgstr "Se de eksterne verdiene"
 
-#: sql.php:192
+#: sql.php:197
 #, php-format
 msgid "Using bookmark \"%s\" as default browse query."
 msgstr ""
 
-#: sql.php:664 tbl_replace.php:369
+#: sql.php:669 tbl_replace.php:369
 #, php-format
 msgid "Inserted row id: %1$d"
 msgstr "Insatt rad id: %1$d"
 
-#: sql.php:681
+#: sql.php:686
 msgid "Showing as PHP code"
 msgstr "Viser som PHP kode"
 
-#: sql.php:684 tbl_replace.php:343
+#: sql.php:689 tbl_replace.php:343
 msgid "Showing SQL query"
 msgstr "Viser SQL spørring"
 
-#: sql.php:686
+#: sql.php:691
 msgid "Validated SQL"
 msgstr "Validert SQL"
 
-#: sql.php:993
+#: sql.php:885
 #, php-format
 msgid "Problems with indexes of table `%s`"
 msgstr "Problemer med indeksene i tabellen `%s`"
 
-#: sql.php:1024
+#: sql.php:916
 msgid "Label"
 msgstr "Navn"
 
@@ -11925,7 +11925,7 @@ msgstr ""
 #: po/advisory_rules.php:27
 msgid ""
 "It is suggested to set {long_query_time} to a lower value, depending on your "
-"enviroment. Usually a value of 1-5 seconds is suggested."
+"environment. Usually a value of 1-5 seconds is suggested."
 msgstr ""
 
 #: po/advisory_rules.php:28
@@ -12142,8 +12142,8 @@ msgstr ""
 #: po/advisory_rules.php:83
 #, php-format
 msgid ""
-"The current ratio of free query cache memory to total query cache size is %s"
-"%%. It should be above 80%%"
+"The current ratio of free query cache memory to total query cache size is %s%"
+"%. It should be above 80%%"
 msgstr ""
 
 #: po/advisory_rules.php:85
@@ -12215,7 +12215,7 @@ msgstr ""
 
 #: po/advisory_rules.php:97
 msgid ""
-"Depending on your enviroment, it might be performance increasing to reduce "
+"Depending on your environment, it might be performance increasing to reduce "
 "this value."
 msgstr ""
 
@@ -12272,8 +12272,8 @@ msgstr ""
 #: po/advisory_rules.php:108
 #, php-format
 msgid ""
-"%s%% of all sorts cause temporary tables, this value should be lower than "
-"10%%."
+"%s%% of all sorts cause temporary tables, this value should be lower than 10%"
+"%."
 msgstr ""
 
 #: po/advisory_rules.php:110
@@ -12896,7 +12896,7 @@ msgstr ""
 #: po/advisory_rules.php:262
 #, php-format
 msgid ""
-"The InnoDB buffer pool has a profound impact on perfomance for InnoDB "
+"The InnoDB buffer pool has a profound impact on performance for InnoDB "
 "tables. Assign all your remaining memory to this buffer. For database "
 "servers that use solely InnoDB as storage engine and have no other services "
 "(e.g. a web server) running, you may set this as high as 80% of your "
