--- a/po/ro.po
+++ b/po/ro.po
@@ -3,14 +3,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2011-08-11 13:55+0200\n"
+"POT-Creation-Date: 2011-08-11 09:06-0400\n"
 "PO-Revision-Date: 2010-07-22 02:28+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: romanian <ro@li.org>\n"
-"Language: ro\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: ro\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : (n==0 || (n%100 > 0 && n%100 < "
 "20)) ? 1 : 2);;\n"
 "X-Generator: Pootle 2.0.1\n"
@@ -215,7 +215,7 @@ msgstr "Comentarii"
 #: server_privileges.php:1468 server_privileges.php:1479
 #: server_privileges.php:1725 server_privileges.php:1736
 #: server_privileges.php:2056 server_privileges.php:2061
-#: server_privileges.php:2355 sql.php:267 sql.php:328 tbl_printview.php:194
+#: server_privileges.php:2355 sql.php:272 sql.php:333 tbl_printview.php:194
 #: tbl_structure.php:347 tbl_tracking.php:321 tbl_tracking.php:326
 msgid "No"
 msgstr "Nu"
@@ -236,7 +236,7 @@ msgstr "Nu"
 #: server_databases.php:76 server_privileges.php:1465
 #: server_privileges.php:1476 server_privileges.php:1722
 #: server_privileges.php:1736 server_privileges.php:2056
-#: server_privileges.php:2059 server_privileges.php:2355 sql.php:327
+#: server_privileges.php:2059 server_privileges.php:2355 sql.php:332
 #: tbl_printview.php:194 tbl_structure.php:41 tbl_structure.php:347
 #: tbl_tracking.php:319 tbl_tracking.php:324
 msgid "Yes"
@@ -640,8 +640,8 @@ msgstr "Monitorizarea nu este activată"
 #: db_structure.php:373 libraries/display_tbl.lib.php:2226
 #, php-format
 msgid ""
-"This view has at least this number of rows. Please refer to %sdocumentation"
-"%s."
+"This view has at least this number of rows. Please refer to %sdocumentation%"
+"s."
 msgstr ""
 "Această vedere are minim acest număr de rânduri. Vedeți %sdocumentation%s."
 
@@ -785,7 +785,7 @@ msgstr "Actualizat(ă)"
 
 #: db_tracking.php:89 libraries/rte/rte_events.lib.php:380
 #: libraries/rte/rte_list.lib.php:67 libraries/server_links.inc.php:51
-#: server_status.php:1068 sql.php:945 tbl_tracking.php:638
+#: server_status.php:1068 sql.php:837 tbl_tracking.php:638
 msgid "Status"
 msgstr "Stare"
 
@@ -891,11 +891,11 @@ msgstr "Copia a fost salvată în fișierul %s."
 #: import.php:57
 #, php-format
 msgid ""
-"You probably tried to upload too large file. Please refer to %sdocumentation"
-"%s for ways to workaround this limit."
+"You probably tried to upload too large file. Please refer to %sdocumentation%"
+"s for ways to workaround this limit."
 msgstr ""
-"Probabil ați încercat să încărcați un fișier prea mare. Faceți referire la "
-"%sdocumentație%s pentru căi de ocolire a acestei limite."
+"Probabil ați încercat să încărcați un fișier prea mare. Faceți referire la %"
+"sdocumentație%s pentru căi de ocolire a acestei limite."
 
 #: import.php:277 import.php:330 libraries/File.class.php:456
 #: libraries/File.class.php:539
@@ -938,7 +938,7 @@ msgstr "Eticheta a fost ștearsă."
 msgid "Showing bookmark"
 msgstr "Afișînd semn de carte"
 
-#: import.php:401 sql.php:980
+#: import.php:401 sql.php:872
 #, php-format
 msgid "Bookmark %s created"
 msgstr "Semnul de carte %s a fost creat"
@@ -991,15 +991,15 @@ msgstr "Click pentru a selecta"
 msgid "Click to unselect"
 msgstr "Click pentru a deselecta"
 
-#: js/messages.php:29 libraries/import.lib.php:102 sql.php:224
+#: js/messages.php:29 libraries/import.lib.php:102 sql.php:229
 msgid "\"DROP DATABASE\" statements are disabled."
 msgstr "Comenzile \"DROP DATABASE\" sînt dezactivate."
 
-#: js/messages.php:32 libraries/mult_submits.inc.php:282 sql.php:322
+#: js/messages.php:32 libraries/mult_submits.inc.php:282 sql.php:327
 msgid "Do you really want to "
 msgstr "Sigur doriți să "
 
-#: js/messages.php:33 libraries/mult_submits.inc.php:282 sql.php:307
+#: js/messages.php:33 libraries/mult_submits.inc.php:282 sql.php:312
 msgid "You are about to DESTROY a complete database!"
 msgstr "Sînteți pe cale să DISTRUGEȚI o întreagă bază de date!"
 
@@ -2416,8 +2416,8 @@ msgstr "Bine ați venit la %s"
 #: libraries/auth/config.auth.lib.php:100
 #, php-format
 msgid ""
-"You probably did not create a configuration file. You might want to use the "
-"%1$ssetup script%2$s to create one."
+"You probably did not create a configuration file. You might want to use the %"
+"1$ssetup script%2$s to create one."
 msgstr ""
 "Motivul probabil pentru aceasta este că nu ați creat un fișier de "
 "configurare. Puteți folosi %1$s vrăjitorul de setări %2$s pentru a crea un "
@@ -2760,7 +2760,7 @@ msgctxt "Inline edit query"
 msgid "Inline"
 msgstr "Motoare"
 
-#: libraries/common.lib.php:1278 sql.php:941
+#: libraries/common.lib.php:1278 sql.php:833
 msgid "Profiling"
 msgstr "Creare profil"
 
@@ -5487,12 +5487,12 @@ msgstr ""
 #| "happen: %3$s. Other text will be kept as is."
 msgid ""
 "This value is interpreted using %1$sstrftime%2$s, so you can use time "
-"formatting strings. Additionally the following transformations will happen: "
-"%3$s. Other text will be kept as is. See the %4$sFAQ%5$s for details."
+"formatting strings. Additionally the following transformations will happen: %"
+"3$s. Other text will be kept as is. See the %4$sFAQ%5$s for details."
 msgstr ""
 "This value is interpreted using %1$sstrftime%2$s, so you can use time "
-"formatting strings. Additionally the following transformations will happen: "
-"%3$s. Other text will be kept as is."
+"formatting strings. Additionally the following transformations will happen: %"
+"3$s. Other text will be kept as is."
 
 #: libraries/display_export.lib.php:270
 msgid "use this for future exports"
@@ -5803,7 +5803,7 @@ msgstr "Afișează înregistrări"
 msgid "total"
 msgstr "total"
 
-#: libraries/display_tbl.lib.php:2252 sql.php:692
+#: libraries/display_tbl.lib.php:2252 sql.php:697
 #, php-format
 msgid "Query took %01.4f sec"
 msgstr "comanda a durat %01.4f sec"
@@ -6275,8 +6275,8 @@ msgstr ""
 #: libraries/engines/pbxt.lib.php:125
 #, php-format
 msgid ""
-"Documentation and further information about PBXT can be found on the "
-"%sPrimeBase XT Home Page%s."
+"Documentation and further information about PBXT can be found on the %"
+"sPrimeBase XT Home Page%s."
 msgstr ""
 
 #: libraries/engines/pbxt.lib.php:129
@@ -6615,7 +6615,7 @@ msgid "Generated by"
 msgstr "Generat de"
 
 #: libraries/import.lib.php:152 libraries/rte/rte_routines.lib.php:1237
-#: sql.php:688 tbl_change.php:183 tbl_get_field.php:34
+#: sql.php:693 tbl_change.php:183 tbl_get_field.php:34
 msgid "MySQL returned an empty result set (i.e. zero rows)."
 msgstr "MySQL a dat un set de rezultate gol (zero linii)."
 
@@ -7340,7 +7340,7 @@ msgid "Returns"
 msgstr "Tipul întors"
 
 #: libraries/rte/rte_list.lib.php:62 libraries/rte/rte_triggers.lib.php:326
-#: server_status.php:1067 sql.php:946
+#: server_status.php:1067 sql.php:838
 msgid "Time"
 msgstr "Timp"
 
@@ -7901,11 +7901,11 @@ msgstr "Calendar"
 msgid "Columns"
 msgstr "Denumirile coloanelor"
 
-#: libraries/sql_query_form.lib.php:302 sql.php:1019 sql.php:1036
+#: libraries/sql_query_form.lib.php:302 sql.php:911 sql.php:928
 msgid "Bookmark this SQL query"
 msgstr "Pune semn de carte la această comandă SQL"
 
-#: libraries/sql_query_form.lib.php:309 sql.php:1030
+#: libraries/sql_query_form.lib.php:309 sql.php:922
 msgid "Let every user access this bookmark"
 msgstr "Permite tuturor utilizatorilor să acceseze acest semn de carte"
 
@@ -9263,8 +9263,8 @@ msgstr "Aruncă baza de date care are același nume ca utilizatorul."
 msgid ""
 "Note: phpMyAdmin gets the users' privileges directly from MySQL's privilege "
 "tables. The content of these tables may differ from the privileges the "
-"server uses, if they have been changed manually. In this case, you should "
-"%sreload the privileges%s before you continue."
+"server uses, if they have been changed manually. In this case, you should %"
+"sreload the privileges%s before you continue."
 msgstr ""
 "Notă: phpMyAdmin folosește privilegiile utilizatorilor direct din tabelul de "
 "privilegii din MySQL. Conținutul acestui tabel poate diferi de cel original. "
@@ -11060,36 +11060,36 @@ msgstr ""
 msgid "Browse foreign values"
 msgstr "Caută printre valori necunoscute"
 
-#: sql.php:192
+#: sql.php:197
 #, php-format
 msgid "Using bookmark \"%s\" as default browse query."
 msgstr ""
 
-#: sql.php:664 tbl_replace.php:369
+#: sql.php:669 tbl_replace.php:369
 #, php-format
 msgid "Inserted row id: %1$d"
 msgstr "ID rînd inserat: %1$d"
 
-#: sql.php:681
+#: sql.php:686
 msgid "Showing as PHP code"
 msgstr "Afișare ca și cod PHP"
 
-#: sql.php:684 tbl_replace.php:343
+#: sql.php:689 tbl_replace.php:343
 msgid "Showing SQL query"
 msgstr "Afișare interogare SQL"
 
-#: sql.php:686
+#: sql.php:691
 #, fuzzy
 #| msgid "Validate SQL"
 msgid "Validated SQL"
 msgstr "Validează SQL"
 
-#: sql.php:993
+#: sql.php:885
 #, php-format
 msgid "Problems with indexes of table `%s`"
 msgstr "Probleme cu indexul tabelului `%s`"
 
-#: sql.php:1024
+#: sql.php:916
 msgid "Label"
 msgstr "Etichetă"
 
@@ -11936,7 +11936,7 @@ msgstr ""
 #: po/advisory_rules.php:27
 msgid ""
 "It is suggested to set {long_query_time} to a lower value, depending on your "
-"enviroment. Usually a value of 1-5 seconds is suggested."
+"environment. Usually a value of 1-5 seconds is suggested."
 msgstr ""
 
 #: po/advisory_rules.php:28
@@ -12150,8 +12150,8 @@ msgstr ""
 #: po/advisory_rules.php:83
 #, php-format
 msgid ""
-"The current ratio of free query cache memory to total query cache size is %s"
-"%%. It should be above 80%%"
+"The current ratio of free query cache memory to total query cache size is %s%"
+"%. It should be above 80%%"
 msgstr ""
 
 #: po/advisory_rules.php:85
@@ -12223,7 +12223,7 @@ msgstr ""
 
 #: po/advisory_rules.php:97
 msgid ""
-"Depending on your enviroment, it might be performance increasing to reduce "
+"Depending on your environment, it might be performance increasing to reduce "
 "this value."
 msgstr ""
 
@@ -12280,8 +12280,8 @@ msgstr ""
 #: po/advisory_rules.php:108
 #, php-format
 msgid ""
-"%s%% of all sorts cause temporary tables, this value should be lower than "
-"10%%."
+"%s%% of all sorts cause temporary tables, this value should be lower than 10%"
+"%."
 msgstr ""
 
 #: po/advisory_rules.php:110
@@ -12902,7 +12902,7 @@ msgstr ""
 #: po/advisory_rules.php:262
 #, php-format
 msgid ""
-"The InnoDB buffer pool has a profound impact on perfomance for InnoDB "
+"The InnoDB buffer pool has a profound impact on performance for InnoDB "
 "tables. Assign all your remaining memory to this buffer. For database "
 "servers that use solely InnoDB as storage engine and have no other services "
 "(e.g. a web server) running, you may set this as high as 80% of your "
