--- a/po/sv.po
+++ b/po/sv.po
@@ -3,14 +3,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2011-08-11 13:55+0200\n"
+"POT-Creation-Date: 2011-08-11 09:06-0400\n"
 "PO-Revision-Date: 2011-07-31 21:19+0200\n"
 "Last-Translator:  <stefan@inkopsforum.se>\n"
 "Language-Team: swedish <sv@li.org>\n"
-"Language: sv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: sv\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.0.5\n"
 
@@ -212,7 +212,7 @@ msgstr "Kommentarer"
 #: server_privileges.php:1468 server_privileges.php:1479
 #: server_privileges.php:1725 server_privileges.php:1736
 #: server_privileges.php:2056 server_privileges.php:2061
-#: server_privileges.php:2355 sql.php:267 sql.php:328 tbl_printview.php:194
+#: server_privileges.php:2355 sql.php:272 sql.php:333 tbl_printview.php:194
 #: tbl_structure.php:347 tbl_tracking.php:321 tbl_tracking.php:326
 msgid "No"
 msgstr "Nej"
@@ -233,7 +233,7 @@ msgstr "Nej"
 #: server_databases.php:76 server_privileges.php:1465
 #: server_privileges.php:1476 server_privileges.php:1722
 #: server_privileges.php:1736 server_privileges.php:2056
-#: server_privileges.php:2059 server_privileges.php:2355 sql.php:327
+#: server_privileges.php:2059 server_privileges.php:2355 sql.php:332
 #: tbl_printview.php:194 tbl_structure.php:41 tbl_structure.php:347
 #: tbl_tracking.php:319 tbl_tracking.php:324
 msgid "Yes"
@@ -612,8 +612,8 @@ msgstr "Spårning är inte aktiv."
 #: db_structure.php:373 libraries/display_tbl.lib.php:2226
 #, php-format
 msgid ""
-"This view has at least this number of rows. Please refer to %sdocumentation"
-"%s."
+"This view has at least this number of rows. Please refer to %sdocumentation%"
+"s."
 msgstr "Denna vy har åtminstone detta antal rader. Se %sdokumentationen%s."
 
 #: db_structure.php:387 db_structure.php:401 libraries/header.inc.php:158
@@ -750,7 +750,7 @@ msgstr "Uppdaterad"
 
 #: db_tracking.php:89 libraries/rte/rte_events.lib.php:380
 #: libraries/rte/rte_list.lib.php:67 libraries/server_links.inc.php:51
-#: server_status.php:1068 sql.php:945 tbl_tracking.php:638
+#: server_status.php:1068 sql.php:837 tbl_tracking.php:638
 msgid "Status"
 msgstr "Status"
 
@@ -849,8 +849,8 @@ msgstr "SQL-satserna har sparats till filen %s."
 #: import.php:57
 #, php-format
 msgid ""
-"You probably tried to upload too large file. Please refer to %sdocumentation"
-"%s for ways to workaround this limit."
+"You probably tried to upload too large file. Please refer to %sdocumentation%"
+"s for ways to workaround this limit."
 msgstr ""
 "Du försökte förmodligen ladda upp en för stor fil. Se %sdokumentationen%s "
 "för att gå runt denna begränsning."
@@ -893,7 +893,7 @@ msgstr "Bokmärket har tagits bort."
 msgid "Showing bookmark"
 msgstr "Visar bokmärke"
 
-#: import.php:401 sql.php:980
+#: import.php:401 sql.php:872
 #, php-format
 msgid "Bookmark %s created"
 msgstr "Bokmärket %s har skapats"
@@ -945,15 +945,15 @@ msgstr "Klicka för att markera"
 msgid "Click to unselect"
 msgstr "Klicka för att avmarkera"
 
-#: js/messages.php:29 libraries/import.lib.php:102 sql.php:224
+#: js/messages.php:29 libraries/import.lib.php:102 sql.php:229
 msgid "\"DROP DATABASE\" statements are disabled."
 msgstr "\"DROP DATABASE\" satserna är inaktiverade."
 
-#: js/messages.php:32 libraries/mult_submits.inc.php:282 sql.php:322
+#: js/messages.php:32 libraries/mult_submits.inc.php:282 sql.php:327
 msgid "Do you really want to "
 msgstr "Vill du verkligen "
 
-#: js/messages.php:33 libraries/mult_submits.inc.php:282 sql.php:307
+#: js/messages.php:33 libraries/mult_submits.inc.php:282 sql.php:312
 msgid "You are about to DESTROY a complete database!"
 msgstr "Du håller på att FÖRSTÖRA en hel databas!"
 
@@ -2260,11 +2260,11 @@ msgstr "Välkommen till %s"
 #: libraries/auth/config.auth.lib.php:100
 #, php-format
 msgid ""
-"You probably did not create a configuration file. You might want to use the "
-"%1$ssetup script%2$s to create one."
+"You probably did not create a configuration file. You might want to use the %"
+"1$ssetup script%2$s to create one."
 msgstr ""
-"Du har troligen inte skapat en konfigurationsfil. Du vill kanske använda "
-"%1$suppsättningsskript%2$s för att skapa denna."
+"Du har troligen inte skapat en konfigurationsfil. Du vill kanske använda %1"
+"$suppsättningsskript%2$s för att skapa denna."
 
 #: libraries/auth/config.auth.lib.php:109
 msgid ""
@@ -2592,7 +2592,7 @@ msgctxt "Inline edit query"
 msgid "Inline"
 msgstr "Infogad"
 
-#: libraries/common.lib.php:1278 sql.php:941
+#: libraries/common.lib.php:1278 sql.php:833
 msgid "Profiling"
 msgstr "Profilering"
 
@@ -5314,8 +5314,8 @@ msgstr ", @TABLE@ blir tabellnamnet"
 #, php-format
 msgid ""
 "This value is interpreted using %1$sstrftime%2$s, so you can use time "
-"formatting strings. Additionally the following transformations will happen: "
-"%3$s. Other text will be kept as is. See the %4$sFAQ%5$s for details."
+"formatting strings. Additionally the following transformations will happen: %"
+"3$s. Other text will be kept as is. See the %4$sFAQ%5$s for details."
 msgstr ""
 "Detta värde tolkas med %1$sstrftime%2$s, så du kan använda strängar med "
 "tidsformatering. Dessutom kommer följande omvandlingar att ske: %3$s. Övrig "
@@ -5599,7 +5599,7 @@ msgstr "Visar rader"
 msgid "total"
 msgstr "totalt"
 
-#: libraries/display_tbl.lib.php:2252 sql.php:692
+#: libraries/display_tbl.lib.php:2252 sql.php:697
 #, php-format
 msgid "Query took %01.4f sec"
 msgstr "Frågan tog %01.4f sek"
@@ -6067,11 +6067,11 @@ msgstr ""
 #: libraries/engines/pbxt.lib.php:125
 #, php-format
 msgid ""
-"Documentation and further information about PBXT can be found on the "
-"%sPrimeBase XT Home Page%s."
+"Documentation and further information about PBXT can be found on the %"
+"sPrimeBase XT Home Page%s."
 msgstr ""
-"Dokumentation och ytterligare information finns på %sPrimeBase XT Home Page"
-"%s."
+"Dokumentation och ytterligare information finns på %sPrimeBase XT Home Page%"
+"s."
 
 #: libraries/engines/pbxt.lib.php:129
 msgid "The PrimeBase XT Blog by Paul McCullagh"
@@ -6397,7 +6397,7 @@ msgid "Generated by"
 msgstr "Genererad av"
 
 #: libraries/import.lib.php:152 libraries/rte/rte_routines.lib.php:1237
-#: sql.php:688 tbl_change.php:183 tbl_get_field.php:34
+#: sql.php:693 tbl_change.php:183 tbl_get_field.php:34
 msgid "MySQL returned an empty result set (i.e. zero rows)."
 msgstr "MySQL returnerade ett tomt resultat (dvs inga rader)."
 
@@ -7114,7 +7114,7 @@ msgid "Returns"
 msgstr "Returnerar"
 
 #: libraries/rte/rte_list.lib.php:62 libraries/rte/rte_triggers.lib.php:326
-#: server_status.php:1067 sql.php:946
+#: server_status.php:1067 sql.php:838
 msgid "Time"
 msgstr "Tid"
 
@@ -7605,11 +7605,11 @@ msgstr "Rensa"
 msgid "Columns"
 msgstr "Kolumn"
 
-#: libraries/sql_query_form.lib.php:302 sql.php:1019 sql.php:1036
+#: libraries/sql_query_form.lib.php:302 sql.php:911 sql.php:928
 msgid "Bookmark this SQL query"
 msgstr "Skapa bokmärke för den här SQL-frågan"
 
-#: libraries/sql_query_form.lib.php:309 sql.php:1030
+#: libraries/sql_query_form.lib.php:309 sql.php:922
 msgid "Let every user access this bookmark"
 msgstr "Låt varje användare få tillgång till detta bokmärke"
 
@@ -8159,8 +8159,8 @@ msgid ""
 "Your PHP MySQL library version %s differs from your MySQL server version %s. "
 "This may cause unpredictable behavior."
 msgstr ""
-"Din PHP MySQL bibliotekversion %s skiljer sig från din MySQL server version "
-"%s. Detta kan orsaka oförutsägbara beteenden."
+"Din PHP MySQL bibliotekversion %s skiljer sig från din MySQL server version %"
+"s. Detta kan orsaka oförutsägbara beteenden."
 
 #: main.php:341
 #, php-format
@@ -8865,8 +8865,8 @@ msgstr "Ta bort databaserna med samma namn som användarna."
 msgid ""
 "Note: phpMyAdmin gets the users' privileges directly from MySQL's privilege "
 "tables. The content of these tables may differ from the privileges the "
-"server uses, if they have been changed manually. In this case, you should "
-"%sreload the privileges%s before you continue."
+"server uses, if they have been changed manually. In this case, you should %"
+"sreload the privileges%s before you continue."
 msgstr ""
 "Anm: phpMyAdmin hämtar användarnas privilegier direkt från MySQL:s "
 "privilegiumtabeller. Innehållet i dessa tabeller kan skilja sig från "
@@ -10662,8 +10662,8 @@ msgid ""
 "protection may not be reliable if your IP belongs to an ISP where thousands "
 "of users, including you, are connected to."
 msgstr ""
-"Om du känner att detta är nödvändigt, använd extra skyddsinställningar - "
-"%shost autentisering%s inställningarna  och %strusted proxies listan%s. Dock "
+"Om du känner att detta är nödvändigt, använd extra skyddsinställningar - %"
+"shost autentisering%s inställningarna  och %strusted proxies listan%s. Dock "
 "kan IP-baserat skydd inte vara tillförlitligt om din IP tillhör en ISP där "
 "tusentals användare, inklusive dig, är anslutna till"
 
@@ -10725,34 +10725,34 @@ msgstr "Nyckeln ska innehålla bokstäver, siffror [em]och[/em] specialtecken."
 msgid "Browse foreign values"
 msgstr "Bläddra bland främmande värden"
 
-#: sql.php:192
+#: sql.php:197
 #, php-format
 msgid "Using bookmark \"%s\" as default browse query."
 msgstr "Använd bokmärke \"% s\" som standard webbläsarfråga."
 
-#: sql.php:664 tbl_replace.php:369
+#: sql.php:669 tbl_replace.php:369
 #, php-format
 msgid "Inserted row id: %1$d"
 msgstr "Infogade rad id: %1$d"
 
-#: sql.php:681
+#: sql.php:686
 msgid "Showing as PHP code"
 msgstr "Visar som PHP-kod"
 
-#: sql.php:684 tbl_replace.php:343
+#: sql.php:689 tbl_replace.php:343
 msgid "Showing SQL query"
 msgstr "Visar SQL-fråga"
 
-#: sql.php:686
+#: sql.php:691
 msgid "Validated SQL"
 msgstr "Validerad SQL-kod"
 
-#: sql.php:993
+#: sql.php:885
 #, php-format
 msgid "Problems with indexes of table `%s`"
 msgstr "Problem med index för tabell `%s`"
 
-#: sql.php:1024
+#: sql.php:916
 msgid "Label"
 msgstr "Etikett"
 
@@ -11548,7 +11548,7 @@ msgstr ""
 #: po/advisory_rules.php:27
 msgid ""
 "It is suggested to set {long_query_time} to a lower value, depending on your "
-"enviroment. Usually a value of 1-5 seconds is suggested."
+"environment. Usually a value of 1-5 seconds is suggested."
 msgstr ""
 
 #: po/advisory_rules.php:28
@@ -11768,8 +11768,8 @@ msgstr ""
 #: po/advisory_rules.php:83
 #, php-format
 msgid ""
-"The current ratio of free query cache memory to total query cache size is %s"
-"%%. It should be above 80%%"
+"The current ratio of free query cache memory to total query cache size is %s%"
+"%. It should be above 80%%"
 msgstr ""
 
 #: po/advisory_rules.php:85
@@ -11841,7 +11841,7 @@ msgstr ""
 
 #: po/advisory_rules.php:97
 msgid ""
-"Depending on your enviroment, it might be performance increasing to reduce "
+"Depending on your environment, it might be performance increasing to reduce "
 "this value."
 msgstr ""
 
@@ -11898,8 +11898,8 @@ msgstr ""
 #: po/advisory_rules.php:108
 #, php-format
 msgid ""
-"%s%% of all sorts cause temporary tables, this value should be lower than "
-"10%%."
+"%s%% of all sorts cause temporary tables, this value should be lower than 10%"
+"%."
 msgstr ""
 
 #: po/advisory_rules.php:110
@@ -12525,7 +12525,7 @@ msgstr ""
 #: po/advisory_rules.php:262
 #, php-format
 msgid ""
-"The InnoDB buffer pool has a profound impact on perfomance for InnoDB "
+"The InnoDB buffer pool has a profound impact on performance for InnoDB "
 "tables. Assign all your remaining memory to this buffer. For database "
 "servers that use solely InnoDB as storage engine and have no other services "
 "(e.g. a web server) running, you may set this as high as 80% of your "
