--- a/po/az.po
+++ b/po/az.po
@@ -3,14 +3,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2011-08-11 09:06-0400\n"
+"POT-Creation-Date: 2011-08-11 15:11+0200\n"
 "PO-Revision-Date: 2010-03-12 09:11+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: azerbaijani <az@li.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: \n"
 "X-Generator: Translate Toolkit 1.5.3\n"
 
 #: browse_foreigners.php:35 browse_foreigners.php:53 js/messages.php:277
@@ -639,8 +639,8 @@ msgstr ""
 #: db_structure.php:373 libraries/display_tbl.lib.php:2226
 #, php-format
 msgid ""
-"This view has at least this number of rows. Please refer to %sdocumentation%"
-"s."
+"This view has at least this number of rows. Please refer to %sdocumentation"
+"%s."
 msgstr ""
 
 #: db_structure.php:387 db_structure.php:401 libraries/header.inc.php:158
@@ -886,8 +886,8 @@ msgstr "Sxem %s faylına qeyd edildi."
 #: import.php:57
 #, php-format
 msgid ""
-"You probably tried to upload too large file. Please refer to %sdocumentation%"
-"s for ways to workaround this limit."
+"You probably tried to upload too large file. Please refer to %sdocumentation"
+"%s for ways to workaround this limit."
 msgstr ""
 
 #: import.php:277 import.php:330 libraries/File.class.php:456
@@ -2372,8 +2372,8 @@ msgstr "%s - e Xoş Gelmişsiniz!"
 #: libraries/auth/config.auth.lib.php:100
 #, php-format
 msgid ""
-"You probably did not create a configuration file. You might want to use the %"
-"1$ssetup script%2$s to create one."
+"You probably did not create a configuration file. You might want to use the "
+"%1$ssetup script%2$s to create one."
 msgstr ""
 
 #: libraries/auth/config.auth.lib.php:109
@@ -5380,8 +5380,8 @@ msgstr ""
 #, php-format
 msgid ""
 "This value is interpreted using %1$sstrftime%2$s, so you can use time "
-"formatting strings. Additionally the following transformations will happen: %"
-"3$s. Other text will be kept as is. See the %4$sFAQ%5$s for details."
+"formatting strings. Additionally the following transformations will happen: "
+"%3$s. Other text will be kept as is. See the %4$sFAQ%5$s for details."
 msgstr ""
 
 #: libraries/display_export.lib.php:270
@@ -6100,8 +6100,8 @@ msgstr ""
 #: libraries/engines/pbxt.lib.php:125
 #, php-format
 msgid ""
-"Documentation and further information about PBXT can be found on the %"
-"sPrimeBase XT Home Page%s."
+"Documentation and further information about PBXT can be found on the "
+"%sPrimeBase XT Home Page%s."
 msgstr ""
 
 #: libraries/engines/pbxt.lib.php:129
@@ -8998,8 +8998,8 @@ msgstr "İstifadeçilerle eyni adlı me'lumat bazalarını leğv et."
 msgid ""
 "Note: phpMyAdmin gets the users' privileges directly from MySQL's privilege "
 "tables. The content of these tables may differ from the privileges the "
-"server uses, if they have been changed manually. In this case, you should %"
-"sreload the privileges%s before you continue."
+"server uses, if they have been changed manually. In this case, you should "
+"%sreload the privileges%s before you continue."
 msgstr ""
 "Qeyd: phpMyAdmin istifadeçi selahiyyetlerini birbaşa MySQL-in selahiyyetler "
 "cedvellerinden almaqdadır. Eger elle nizamlamalar edilmişse, bu cedvellerin "
@@ -11747,8 +11747,8 @@ msgstr ""
 #: po/advisory_rules.php:83
 #, php-format
 msgid ""
-"The current ratio of free query cache memory to total query cache size is %s%"
-"%. It should be above 80%%"
+"The current ratio of free query cache memory to total query cache size is %s"
+"%%. It should be above 80%%"
 msgstr ""
 
 #: po/advisory_rules.php:85
@@ -11873,8 +11873,8 @@ msgstr ""
 #: po/advisory_rules.php:108
 #, php-format
 msgid ""
-"%s%% of all sorts cause temporary tables, this value should be lower than 10%"
-"%."
+"%s%% of all sorts cause temporary tables, this value should be lower than "
+"10%%."
 msgstr ""
 
 #: po/advisory_rules.php:110
@@ -11940,7 +11940,7 @@ msgstr ""
 #: po/advisory_rules.php:127
 msgid ""
 "This usually indicates frequent full index scans. Full index scans are "
-"faster than table scans but require lots of cpu cycles in big tables, if "
+"faster than table scans but require lots of CPU cycles in big tables, if "
 "those tables that have or had high volumes of UPDATEs and DELETEs, running "
 "'OPTIMIZE TABLE' might reduce the amount of and/or speed up full index "
 "scans. Other than that full index scans can only be reduced by rewriting "
@@ -12004,9 +12004,9 @@ msgstr ""
 
 #: po/advisory_rules.php:142
 msgid ""
-"If you have deliberatly changed one of either: The server uses the lower "
+"If you have deliberately changed one of either: The server uses the lower "
 "value of either to determine the maximum size of in-memory tables. So if you "
-"wish to increse the in-memory table limit you will have to increase the "
+"wish to increase the in-memory table limit you will have to increase the "
 "other value as well."
 msgstr ""
 
@@ -12032,7 +12032,7 @@ msgid ""
 "Increasing {max_heap_table_size} and {tmp_table_size} might help. However "
 "some temporary tables are always being written to disk, independent of the "
 "value of these variables. To elminiate these you will have to rewrite your "
-"queries to avoid those conditions (Within a temprorary table: Presence of a "
+"queries to avoid those conditions (Within a temporary table: Presence of a "
 "BLOB or TEXT column or presence of a column bigger than 512 bytes) as "
 "mentioned in the beginning of an <a href=\\\"http://www.facebook.com/note."
 "php?note_id=10150111255065841&comments\\\">Article by the Pythian Group</a>"
@@ -12302,7 +12302,7 @@ msgstr "Elaqeler"
 
 #: po/advisory_rules.php:221
 msgid ""
-"The maximum amount of used connnections is getting close to the value of "
+"The maximum amount of used connections is getting close to the value of "
 "max_connections."
 msgstr ""
 
@@ -12418,7 +12418,7 @@ msgstr ""
 #: po/advisory_rules.php:252
 #, php-format
 msgid ""
-"Especiallay one a system with a lot of writes to InnoDB tables you shoud set "
+"Especially one a system with a lot of writes to InnoDB tables you should set "
 "innodb_log_file_size to 25% of {innodb_buffer_pool_size}. However the bigger "
 "this value, the longer the recovery time will be when database crashes, so "
 "this value should not be set much higher than 256 MiB. Please note however "
